* Renamed stop operation to pause.

logfile.xsl
----------------------
* Changed the logfile.xsl to have an output method (some Xalan versions gave an error on this). Patch from Matt Albrecht

main.jsp & navigation.jsp
----------------------
* Fix for compatability with Tomcat 5.0. Patch from Robert Pearse
* Include sub-jsps instead of having all the content in main.jsp

Modification Set
----------------------
* Changed to instruct CC to do a build if a modification occurs in the future. Patch by Geoff Krapf

Project
----------------------
* add descriptive toString so JMX view of CruiseControlManager shows status for each project - Patch by Matt Albrecht
* fixed to allow changing build interval from JMX interface. Project was reloading the original value from Schedule, overwriting any change a user had made in the JMX interface.
* Last Build and Last Good Build are now passed to the builders (cclastbuildtimestamp and cclastgoodbuildtimestamp respectively)

SametimeAnnouncementPublisher
----------------------
* New publisher implementation to publish build results to IBM/Lotus Sametime server. Contributed by Richard Lewis-Shell.

SVN
----------------------
* fix to use execute on Commandline object instead of just using getCommandline() - Patch by Etienne Studer
* updated to use new date format (Subversion 0.37 and later) Patch by Garrick Olson

TabSheetTag
----------------------
* changed to not use images for tabs. should make it easier to add new tabs.

CruiseControl Release Notes - 2.1.4

AntBuilder
----------------------
* Added loggerClassName attribute to allow alternative ant listener/logger - Patch by Patrick Lisser

ArtifactsPublisher
----------------------
* Fixed a bug where a non-existant directory would result in a non-CruiseControl exception.

build.xml
----------------------
* Constrain checkstyle to only run against cruisecontrol code; ignore other packages.
* Build webapp by explicitly calling war target.  No longer default target.