@@ -985,6 +985,11 @@
                <td class="tabledata">dir</td>
                <td class="tabledata">all files with extension .xml will be merged into the build log.</td>
             </tr>
+            <tr>
+               <td class="tabledata">removeproperties</td>
+               <td class="tabledata">No</td>
+               <td class="tabledata">when merging a JUnit xml file should the properties section be removed. Default is true.</td>
+            </tr>
          </table>
 </ul>
          <hr>
